--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 3px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 33px;
+    @apply bg-slate-600;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    @apply bg-slate-300;
+    border-radius: 33px;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    @apply bg-slate-700;
+  }
 }
